fix: remove scrollbar from body

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,10 @@ body {
 
 }
 
+body::-webkit-scrollbar {
+  display: none; /* Chrome, Edge e Safari */
+}
+
 .main-background {
   width: 1440px;
   min-height: 900px;
